// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectField component > renders correctly with value 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r0:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-white hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-full justify-between"
    data-state="closed"
    id="select-field"
    role="combobox"
    type="button"
  >
    <div
      class="flex flex-row items-center"
    >
      <svg
        class="lucide lucide-search mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <path
          d="m21 21-4.3-4.3"
        />
      </svg>
      Option 1
    </div>
    <svg
      class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 15 5 5 5-5"
      />
      <path
        d="m7 9 5-5 5 5"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`SelectField component > renders correctly without value 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r1:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-white hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-full justify-between"
    data-state="closed"
    id="select-field"
    role="combobox"
    type="button"
  >
    <div
      class="flex flex-row items-center"
    >
      <svg
        class="lucide lucide-search mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <path
          d="m21 21-4.3-4.3"
        />
      </svg>
      Select an option
    </div>
    <svg
      class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 15 5 5 5-5"
      />
      <path
        d="m7 9 5-5 5 5"
      />
    </svg>
  </button>
</DocumentFragment>
`;
